--- a/pkgforce/pom.xml
+++ b/pkgforce/pom.xml
@@ -203,6 +203,7 @@
               <sources>
                 <source>jvm/src/main/java</source>
                 <source>jvm/src/main/scala</source>
+                <source>ff-apex-outline-parser/shared/src/main/scala</source>
               </sources>
             </configuration>
           </execution>
