Make use of outline parser selectable.

--- a/apexlink/pom.xml
+++ b/apexlink/pom.xml
@@ -345,6 +345,22 @@
         <executions>
           <execution>
             <id>test</id>
+            <configuration>
+              <systemProperties>
+                <parser>ANTLR</parser>
+              </systemProperties>
+            </configuration>
+            <goals>
+              <goal>test</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>test OutlineParser</id>
+            <configuration>
+              <systemProperties>
+                <parser>OutlineParser</parser>
+              </systemProperties>
+            </configuration>
             <goals>
               <goal>test</goal>
             </goals>
