--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -34,6 +34,13 @@ jobs:
       working-directory: './runforce'
       run: mvn -B install -Dgpg.skip
 
+    - name: outline-parser-checkout
+      uses: actions/checkout@v2
+      with:
+        repository: financialforcedev/ff-apex-outline-parser
+        ref: 'apex-link-integration'
+        path: './pkgforce/ff-apex-outline-parser'
+
     - name: Build with Maven
       run: |
         mvn --version
