--- a/apexlink/pom.xml
+++ b/apexlink/pom.xml
@@ -3,13 +3,13 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>apexlink</artifactId>
-  <version>2.3.1-SNAPSHOT</version>
+  <version>2.3.1</version>
   <packaging>jar</packaging>
 
   <parent>
     <groupId>com.github.nawforce</groupId>
     <artifactId>apexlink-parent</artifactId>
-    <version>2.3.1-SNAPSHOT</version>
+    <version>2.3.1</version>
   </parent>
 
   <name>apexlink</name>
@@ -78,7 +78,7 @@
     <dependency>
       <groupId>com.github.nawforce</groupId>
       <artifactId>pkgforce_2.13</artifactId>
-      <version>2.3.1-SNAPSHOT</version>
+      <version>2.3.1</version>
     </dependency>
 
     <dependency>
