--- a/pkgforce/pom.xml
+++ b/pkgforce/pom.xml
@@ -3,13 +3,13 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>pkgforce_2.13</artifactId>
-  <version>2.3.1-SNAPSHOT</version>
+  <version>2.3.1</version>
   <packaging>jar</packaging>
 
   <parent>
     <groupId>com.github.nawforce</groupId>
     <artifactId>apexlink-parent</artifactId>
-    <version>2.3.1-SNAPSHOT</version>
+    <version>2.3.1</version>
   </parent>
 
   <name>pkgforce</name>
