--- a/pkgforce/pom.xml
+++ b/pkgforce/pom.xml
@@ -2,6 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
+  <groupId>com.github.nawforce</groupId>
   <artifactId>pkgforce_2.13</artifactId>
   <version>2.3.1</version>
   <packaging>jar</packaging>
@@ -394,6 +395,7 @@
             <param>${project.basedir}/js/src/main/scala</param>
             <param>${project.basedir}/jvm/src/main/scala</param>
           </sourceDirectories>
+          <showReformattedOnly>true</showReformattedOnly>
         </configuration>
         <executions>
           <execution>
