--- a/pkgforce/pom.xml
+++ b/pkgforce/pom.xml
@@ -59,6 +59,12 @@
 
   <dependencies>
     <dependency>
+      <groupId>com.github.nawforce</groupId>
+      <artifactId>apex-jorje</artifactId>
+      <version>2.3.1</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.scala-lang</groupId>
       <artifactId>scala-library</artifactId>
       <version>2.13.3</version>
