--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>pkgforce</module>
         <module>apexlink</module>
+        <module>apex-jorje</module>
     </modules>
 
 </project>
