--- a/pkgforce/pom.xml
+++ b/pkgforce/pom.xml
@@ -184,6 +184,24 @@
       </plugin>
 
       <plugin>
+        <groupId>com.google.code.sbtrun-maven-plugin</groupId>
+        <artifactId>sbtrun-maven-plugin</artifactId>
+        <version>1.0.1</version>
+        <executions>
+          <execution>
+            <id>compile-assets</id>
+            <phase>generate-resources</phase>
+            <goals>
+              <goal>run</goal>
+            </goals>
+            <configuration>
+              <args>pkgforceJS/build</args>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>build-helper-maven-plugin</artifactId>
         <version>1.3</version>
@@ -213,6 +231,21 @@
                 <source>jvm/src/test/java</source>
                 <source>jvm/src/test/scala</source>
               </sources>
+            </configuration>
+          </execution>
+          <execution>
+            <id>add-web-assets-to-resources</id>
+            <phase>generate-resources</phase>
+            <goals>
+              <goal>add-resource</goal>
+            </goals>
+            <configuration>
+              <resources>
+                <resource>
+                  <directory>${project.build.directory}</directory>
+                  <targetPath>public</targetPath>
+                </resource>
+              </resources>
             </configuration>
           </execution>
         </executions>
