--- a/pkgforce/pom.xml
+++ b/pkgforce/pom.xml
@@ -189,8 +189,8 @@
         <version>1.0.1</version>
         <executions>
           <execution>
-            <id>compile-assets</id>
-            <phase>generate-resources</phase>
+            <id>compile-pkgforceJS</id>
+            <phase>compile</phase>
             <goals>
               <goal>run</goal>
             </goals>
@@ -231,21 +231,6 @@
                 <source>jvm/src/test/java</source>
                 <source>jvm/src/test/scala</source>
               </sources>
-            </configuration>
-          </execution>
-          <execution>
-            <id>add-web-assets-to-resources</id>
-            <phase>generate-resources</phase>
-            <goals>
-              <goal>add-resource</goal>
-            </goals>
-            <configuration>
-              <resources>
-                <resource>
-                  <directory>${project.build.directory}</directory>
-                  <targetPath>public</targetPath>
-                </resource>
-              </resources>
             </configuration>
           </execution>
         </executions>
