--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.nawforce</groupId>
     <artifactId>apexlink-parent</artifactId>
-    <version>2.3.1</version>
+    <version>2.4.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>apexlink parent</name>
