--- a/pkgforce/pom.xml
+++ b/pkgforce/pom.xml
@@ -59,9 +59,15 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.github.nawforce</groupId>
-      <artifactId>apex-jorje</artifactId>
-      <version>2.3.1</version>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-lang3</artifactId>
+        <version>3.8.1</version>
+    </dependency>
+
+    <dependency>
+        <groupId>com.github.nawforce</groupId>
+        <artifactId>uber-apex-jorje</artifactId>
+        <version>1.0.0</version>
     </dependency>
 
     <dependency>
