--- a/pkgforce/pom.xml
+++ b/pkgforce/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.github.nawforce</groupId>
   <artifactId>pkgforce_2.13</artifactId>
-  <version>2.4.0-SNAPSHOT</version>
+  <version>2.4.0</version>
   <packaging>jar</packaging>
 
   <name>pkgforce</name>
