--- a/pkgforce/pom.xml
+++ b/pkgforce/pom.xml
@@ -84,6 +84,12 @@
 
     <dependency>
       <groupId>com.github.nawforce</groupId>
+      <artifactId>runforce</artifactId>
+      <version>53.1.2</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.github.nawforce</groupId>
       <artifactId>apex-parser</artifactId>
       <version>2.12.1</version>
     </dependency>
