Move outline parser back into its own module

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <name>apexlink parent</name>
 
     <modules>
+        <module>ff-apex-outline-parser</module>
         <module>pkgforce</module>
         <module>apexlink</module>
     </modules>
