--- a/pkgforce/pom.xml
+++ b/pkgforce/pom.xml
@@ -59,6 +59,12 @@
 
   <dependencies>
     <dependency>
+      <groupId>com.github.financialforcedev</groupId>
+      <artifactId>ff-apex-outline-parser_2.13</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
         <groupId>org.apache.commons</groupId>
         <artifactId>commons-lang3</artifactId>
         <version>3.0</version>
@@ -234,7 +240,6 @@
               <sources>
                 <source>jvm/src/main/java</source>
                 <source>jvm/src/main/scala</source>
-                <source>ff-apex-outline-parser/shared/src/main/scala</source>
               </sources>
             </configuration>
           </execution>
