--- a/ff-apex-outline-parser/pom.xml
+++ b/ff-apex-outline-parser/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.github.financialforcedev</groupId>
   <artifactId>ff-apex-outline-parser_2.13</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>pom</packaging>
 
   <name>ff-apex-outline-parser</name>
