--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -25,6 +25,17 @@ jobs:
         java-version: 8
         cache: "maven"
 
+    - name: runforce-checkout
+      uses: actions/checkout@v2
+      with:
+        repository: bmathewffdc/runforce
+        ref: 'platform-ctors'
+        path: './runforce'
+
+    - name: runforce-compile
+      working-directory: './runforce'
+      run: mvn -B install -Dgpg.skip
+
     - name: Build with Maven
       run: |
         mvn --version
