--- a/pkgforce/pom.xml
+++ b/pkgforce/pom.xml
@@ -219,7 +219,29 @@
               <goal>run</goal>
             </goals>
             <configuration>
-              <args>pkgforceJS/build pkgforceJS/test</args>
+              <args>pkgforceJS/build</args>
+            </configuration>
+          </execution>
+          <execution>
+            <id>test-pkgforceJS</id>
+            <phase>test</phase>
+            <goals>
+              <goal>run</goal>
+            </goals>
+            <configuration>
+              <!--suppress MavenModelInspection-->
+              <skip>${skipTests}</skip>
+              <args>pkgforceJS/test</args>
+            </configuration>
+          </execution>
+          <execution>
+            <id>install-pkgforceJS</id>
+            <phase>install</phase>
+            <goals>
+              <goal>run</goal>
+            </goals>
+            <configuration>
+              <args>pkgforceJS/publishLocal</args>
             </configuration>
           </execution>
         </executions>
