Update to use nawforce/runforce repo in build

--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -28,8 +28,7 @@ jobs:
     - name: runforce-checkout
       uses: actions/checkout@v2
       with:
-        repository: bmathewffdc/runforce
-        ref: 'platform-ctors'
+        repository: nawforce/runforce
         path: './runforce'
 
     - name: runforce-compile
