Update project files

--- a/ff-apex-outline-parser/pom.xml
+++ b/ff-apex-outline-parser/pom.xml
@@ -21,6 +21,20 @@
   </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>org.scalatest</groupId>
+      <artifactId>scalatest_2.13</artifactId>
+      <version>3.2.2</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>com.github.nawforce</groupId>
+      <artifactId>uber-apex-jorje</artifactId>
+      <version>1.0.0</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
