Tidy comparison tests to other parsers

--- a/ff-apex-outline-parser/pom.xml
+++ b/ff-apex-outline-parser/pom.xml
@@ -35,6 +35,14 @@
       <scope>test</scope>
     </dependency>
 
+    <dependency>
+      <groupId>io.github.apex-dev-tools</groupId>
+      <artifactId>apex-parser</artifactId>
+      <version>3.0.0</version>
+      <scope>test</scope>
+    </dependency>
+
+
   </dependencies>
 
   <build>
@@ -131,6 +139,14 @@
           </filesets>
         </configuration>
       </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+                <source>7</source>
+                <target>7</target>
+            </configuration>
+        </plugin>
 
     </plugins>
   </build>
