--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -13,22 +13,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-      with:
-        submodules: recursive
-    - uses: olafurpg/setup-scala@v10
-
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v2
-      with:
-        distribution: adopt
-        java-version: 8
-        cache: "maven"
+    - uses: actions/checkout@v3
+    - uses: olafurpg/setup-scala@v11
 
     - name: Build with Maven
       run: |
         mvn --version
         mvn -B install -Dgpg.skip
+
+    - name: Checkout samples repo
+      uses: actions/checkout@v3
+      with:
+        submodules: recursive
+        repository: apex-dev-tools/apex-samples
+        path: samples
 
     - name: TriggerX 
       run: java -cp "apexlink/target/dependency/*:apexlink/target/apexlink.jar" com.nawforce.apexlink.ApexLink -verbose -nocache -outlinemulti samples/TriggerX/TriggerX
