Disable sample with expected error

--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -46,8 +46,9 @@ jobs:
     - name: SimpleLightningComponents
       run: java -cp "apexlink/target/dependency/*:apexlink/target/apexlink.jar" com.nawforce.apexlink.ApexLink -verbose -nocache -outlinemulti samples/SimpleLightningComponents/SimpleLightningComponents
 
-    - name: FormulaShare-DX 
-      run: java -cp "apexlink/target/dependency/*:apexlink/target/apexlink.jar" com.nawforce.apexlink.ApexLink -verbose -nocache -outlinemulti samples/FormulaShare-DX/FormulaShare-DX
+    # Unreachable statement in class testing exception throw
+    #- name: FormulaShare-DX 
+    #  run: java -cp "apexlink/target/dependency/*:apexlink/target/apexlink.jar" com.nawforce.apexlink.ApexLink -verbose -nocache -outlinemulti samples/FormulaShare-DX/FormulaShare-DX
 
     - name: Apex-for-Xero 
       run: java -cp "apexlink/target/dependency/*:apexlink/target/apexlink.jar" com.nawforce.apexlink.ApexLink -verbose -nocache -outlinemulti samples/Apex-for-Xero/Apex-for-Xero
