--- a/.github/workflows/reusable_tests.yml
+++ b/.github/workflows/reusable_tests.yml
@@ -103,8 +103,8 @@ jobs:
     - name: grid 
       run: java -cp "./artifacts/dependencies/*:./artifacts/apexlink.jar" com.nawforce.apexlink.ApexLink -verbose -nocache -outlinemulti samples/grid/grid
 
-    - name: soql-secure 
-      run: java -cp "./artifacts/dependencies/*:./artifacts/apexlink.jar" com.nawforce.apexlink.ApexLink -verbose -nocache -outlinemulti samples/soql-secure/soql-secure
+    #- name: soql-secure 
+    #  run: java -cp "./artifacts/dependencies/*:./artifacts/apexlink.jar" com.nawforce.apexlink.ApexLink -verbose -nocache -outlinemulti samples/soql-secure/soql-secure
 
     - name: box-salesforce-sdk 
       run: java -cp "./artifacts/dependencies/*:./artifacts/apexlink.jar" com.nawforce.apexlink.ApexLink -verbose -nocache -outlinemulti samples/box-salesforce-sdk/box-salesforce-sdk
