--- a/pkgforce/js/npm/package.json
+++ b/pkgforce/js/npm/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "antlr4ts": "0.5.0-alpha.4",
     "@apexdevtools/apex-parser": "3.0.0",
-    "vf-parser": "1.0.0",
+    "@apexdevtools/vf-parser": "1.0.0",
     "@xmldom/xmldom": "0.7.5"
   },
   "devDependencies": {
