--- a/pkgforce/pom.xml
+++ b/pkgforce/pom.xml
@@ -89,6 +89,12 @@
     </dependency>
 
     <dependency>
+      <groupId>io.github.apex-dev-tools</groupId>
+      <artifactId>vf-parser</artifactId>
+      <version>1.0.0</version>
+    </dependency>
+
+    <dependency>
       <groupId>com.github.nawforce</groupId>
       <artifactId>scala-json-rpc_2.13</artifactId>
       <version>1.0.1</version>
