--- a/pkgforce/pom.xml
+++ b/pkgforce/pom.xml
@@ -78,7 +78,7 @@
 
     <dependency>
       <groupId>io.github.apex-dev-tools</groupId>
-      <artifactId>runforce</artifactId>
+      <artifactId>standard-types</artifactId>
       <version>55.0.0</version>
     </dependency>
 
