Add comments around failing tests Add new tests

--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -60,7 +60,8 @@ jobs:
     #- name: FindNearby
     #  run: java -cp "apexlink/target/dependency/*:apexlink/target/apexlink.jar" com.nawforce.apexlink.ApexLink -verbose -nocache -outlinemulti samples/FindNearby
 
-    # No matching method found for 'getAsyncApexJobResult' on 'System.FinalizerContext'. This project cannot be pushed.
+    # No matching method found for 'getAsyncApexJobResult' on 'System.FinalizerContext'.
+    # This project cannot be pushed.
     #- name: promiseV3 
     #  run: java -cp "apexlink/target/dependency/*:apexlink/target/apexlink-1.4.2.jar" com.nawforce.apexlink.ApexLink -verbose -nocache -outlinemulti samples/promiseV3/promiseV3
 
@@ -192,7 +193,7 @@ jobs:
     - name: R-apex 
       run: java -cp "apexlink/target/dependency/*:apexlink/target/apexlink.jar" com.nawforce.apexlink.ApexLink -verbose -nocache -outlinemulti samples/R-apex/R-apex
 
-    # Needs Investigation
+    # https://github.com/financialforcedev/ff-apex-ls/issues/260 & https://github.com/financialforcedev/ff-apex-ls/issues/261
     #- name: rflib 
     #  run: java -cp "apexlink/target/dependency/*:apexlink/target/apexlink.jar" com.nawforce.apexlink.ApexLink -verbose -nocache -outlinemulti samples/rflib/rflib
 
@@ -208,7 +209,7 @@ jobs:
     - name: Forceea-data-factory 
       run: java -cp "apexlink/target/dependency/*:apexlink/target/apexlink.jar" com.nawforce.apexlink.ApexLink -verbose -nocache -outlinemulti samples/Forceea-data-factory/Forceea-data-factory/dx
 
-    # Needs Investigation
+    # project is valid and can be deployed with no modification. However, there seems to be an issues around finding types that needs more investigation
     # - name: ApexTestKit
     #  run: java -cp "apexlink/target/dependency/*:apexlink/target/apexlink.jar" com.nawforce.apexlink.ApexLink -verbose -nocache -outlinemulti samples/ApexTestKit/ApexTestKit
 
@@ -260,22 +261,28 @@ jobs:
     - name: sfdx-mass-action-scheduler 
       run: java -cp "apexlink/target/dependency/*:apexlink/target/apexlink.jar" com.nawforce.apexlink.ApexLink -verbose -nocache -outlinemulti samples/sfdx-mass-action-scheduler/sfdx-mass-action-scheduler
 
-    # Needs Investigation
+    # https://github.com/financialforcedev/ff-apex-ls/issues/262
     # - name: apex-recipes
     #   run: java -cp "apexlink/target/dependency/*:apexlink/target/apexlink.jar" com.nawforce.apexlink.ApexLink -verbose -nocache -outlinemulti samples/apex-recipes/apex-recipes
 
-    # Needs Investigation
+    # Project not deployable as is. May need building for the errors to disappear
+    # Error seems to be able to about no resolving a class
     #- name: NPSP 
     #  run: java -cp "apexlink/target/dependency/*:apexlink/target/apexlink.jar" com.nawforce.apexlink.ApexLink -verbose -nocache -outlinemulti samples/NPSP
 
     - name: apex-mdapi 
       run: java -cp "apexlink/target/dependency/*:apexlink/target/apexlink.jar" com.nawforce.apexlink.ApexLink -verbose -nocache -outlinemulti samples/apex-mdapi/apex-mdapi
 
-    # Needs Investigation
+    # Issue around apex-parser
+    # https://github.com/financialforcedev/ff-apex-ls/issues/264
+    # https://github.com/financialforcedev/ff-apex-ls/issues/265
     # - name: apex-rollup 
     #  run: java -cp "apexlink/target/dependency/*:apexlink/target/apexlink.jar" com.nawforce.apexlink.ApexLink -verbose -nocache -outlinemulti samples/apex-rollup/apex-rollup
 
-    # Needs Investigation
+    # Multiple issues for this project. One of them is
+    # https://github.com/financialforcedev/ff-apex-ls/issues/267
+    # https://github.com/financialforcedev/ff-apex-ls/issues/268
+    # One more issue around not finding fields in custom SObjects that needs more investigation
     # - name: NebulaLogger
     #  run: java -cp "apexlink/target/dependency/*:apexlink/target/apexlink.jar" com.nawforce.apexlink.ApexLink -verbose -nocache -outlinemulti samples/NebulaLogger/NebulaLogger
 
@@ -354,7 +361,15 @@ jobs:
     - name: visualforce-typeahead 
       run: java -cp "apexlink/target/dependency/*:apexlink/target/apexlink.jar" com.nawforce.apexlink.ApexLink -verbose -nocache -outlinemulti samples/visualforce-typeahead/visualforce-typeahead
 
-    # Needs Investigation
+    # SObject issue could be related to https://github.com/financialforcedev/ff-apex-ls/issues/260
+    # Errors around resolving a clas that's in an unpackaged folder that contains a package.xml
     # - name: Cumulus
     #  run: java -cp "apexlink/target/dependency/*:apexlink/target/apexlink.jar" com.nawforce.apexlink.ApexLink -verbose -nocache -outlinemulti samples/Cumulus
+
+    - name: ActionPlansV4
+      run: java -cp "apexlink/target/dependency/*:apexlink/target/apexlink.jar" com.nawforce.apexlink.ApexLink -verbose -nocache -outlinemulti samples/ActionPlansV4/ActionPlansV4
+
+    - name: survey-force
+      run: java -cp "apexlink/target/dependency/*:apexlink/target/apexlink.jar" com.nawforce.apexlink.ApexLink -verbose -nocache -outlinemulti samples/survey-force/survey-force
+
 
