--- a/.gitignore
+++ b/.gitignore
@@ -3,15 +3,8 @@
 .bloop/
 .metals/
 .vscode/
+project/.bloop/
+project/project/
 
 **/target/
 **/node_modules/
-
-js/npm/package-lock.json
-js/npm/pkgforce-fastopt.js
-js/npm/pkgforce-fastopt.js.map
-js/npm/pkgforce-opt.js
-js/npm/pkgforce-opt.js.map
-js/npm/lib/
-
-
