chore: Update scalafmt to latest version

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,5 +1,10 @@
-version = 2.6.3
+version = 3.5.9
+runner.dialect = scala213
+
 continuationIndent.defnSite = 2
 optIn.configStyleArguments = false
 align.preset = more
 maxColumn = 100
+
+# Shorthand set runner.dialect for sbt files
+fileOverride { "glob:**/*.sbt" = sbt1 }
