chore: Remove broken sourcemap from node build

--- a/js/npm/tsconfig.json
+++ b/js/npm/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "es2015",
     "module": "commonjs",
-    "sourceMap": true,
+    "sourceMap": false,
     "declaration": false,
     "rootDir": "src",
     "outDir": "lib",
