--- a/.github/workflows/WinBuild.yml
+++ b/.github/workflows/WinBuild.yml
@@ -19,13 +19,9 @@ jobs:
         distribution: adopt
         java-version: 8
         cache: "maven"
-        
-    - name: Set up Maven
-      uses: stCarolas/setup-maven@v4.2
-      with:
-        maven-version: 3.8.1
 
-    - name: Build with Maven
-      run: |
-        mvn --version
-        mvn -B install -D gpg.skip
+    - name: Build
+      run: sbt build
+
+    - name: Test
+      run: sbt test
