fix: Set npm dependency cache lockfile location

--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -27,6 +27,7 @@ jobs:
       with:
         node-version: 16
         cache: 'npm'
+        cache-dependency-path: js/npm/package-lock.json
 
     - name: Checkout samples repo
       uses: actions/checkout@v3
