--- a/.github/workflows/BuildWin.yml
+++ b/.github/workflows/BuildWin.yml
@@ -19,6 +19,7 @@ jobs:
       with:
         node-version: 16
         cache: 'npm'
+        cache-dependency-path: js/npm/package-lock.json
 
     - name: Build
       run: sbt build
