--- a/.github/workflows/Publish.yml
+++ b/.github/workflows/Publish.yml
@@ -17,6 +17,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 # Fetch all history/tags
 
       - uses: actions/setup-java@v3
         with:
