fix: scalafmt config value name change

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,7 +1,7 @@
 version = 3.5.9
 runner.dialect = scala213
 
-continuationIndent.defnSite = 2
+indent.defnSite = 2
 optIn.configStyleArguments = false
 align.preset = more
 maxColumn = 100
