Revert "temp comment out EDA test"
This reverts commit 6e696d5f1727a1b8324bf56db49f1a734732a37e.

--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -79,8 +79,9 @@ jobs:
     #- name: promiseV3 
     #  run: java -cp "apexlink/target/dependency/*:apexlink/target/apexlink-1.4.2.jar" com.nawforce.apexlink.ApexLink -verbose -nocache -outlinemulti apex-samples/promiseV3/promiseV3
 
-    - name: Apex-Opensource-Library
-      run: ${{env.TESTCMD}} apex-samples/Apex-Opensource-Library/Apex-Opensource-Library
+    # https://github.com/financialforcedev/ff-apex-ls/issues/259
+    # - name: Apex-Opensource-Library 
+    #  run: ${{env.TESTCMD}} apex-samples/Apex-Opensource-Library/Apex-Opensource-Library
 
     - name: SFDCRules 
       run: ${{env.TESTCMD}} apex-samples/SFDCRules/SFDCRules
