chore: Update build and doc to use new package alias

--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 env:
-  TESTCMD: java -cp "jvm/target/scala-2.13/*:jvm/target/scala-2.13/apex-ls_2.13-*.jar" com.nawforce.apexlink.ApexLink -verbose -nocache -outlinemulti
+  TESTCMD: java -cp "jvm/target/scala-2.13/*:jvm/target/scala-2.13/apex-ls_2.13-*.jar" io.github.apexdevtools.apexls.Main -verbose -nocache -outlinemulti
 
 jobs:
   build:
